Reacties verwijderen + post categorieen + chat + profielimage

--- a/cb/cb.csproj
+++ b/cb/cb.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\SignUpController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -217,6 +218,7 @@
     <Content Include="Views\Post\PostPage.cshtml" />
     <Content Include="Views\User\UserProfile.cshtml" />
     <Content Include="Views\Friends\Index.cshtml" />
+    <Content Include="Views\Message\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
